# bili_dl

./: .gitignore  README.md  api.c  config.c  config.h  main.c  meson.build
api/: api.h  merge.c  video.c
api/anime/: anime.c  configa.c
api/folder/: configf.c  folder.c
api/video/: configv.c  merge.c  video.c
examples/: folder.json  video.json  video1.json
utils/: config.c  configu.c  log.c  utils.c  utils.h  wbi.c
